<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorAreaLight"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Area42Auth.RegisterFormArea42">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity = "center"
        android:layout_centerInParent="true"

        android:visibility="gone" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="127dp"
        android:layout_height="53dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:text="AREA 42"
        android:layout_gravity = "center"
        android:textSize="30dp" />

    <Space
        android:layout_width="1dp"
        android:layout_height="60dp" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="306dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/box_rectangle_sign">

            <Space
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:layout_weight="1" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/colorPrimaryDark">

                <AutoCompleteTextView
                    android:id="@+id/usernameForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryDark"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <Space
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:layout_weight="1" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:layout_weight="1" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordVerif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password_verification"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionDone" />

            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="1dp"
                android:layout_height="80dp"
                android:layout_weight="1" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/registerButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="130dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/action_register"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:background="@drawable/rounded_button"
                    android:textColor="@color/colorAreaLight"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/cancelButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/cancel_button"
                    android:textSize="14sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:background="@drawable/rounded_button_cancel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <Space
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:layout_weight="1" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>